src/test/ui/deprecated-safe/deprecated-safe-unsafe-edition-call.thir.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/deprecated-safe-unsafe-edition-call.rs:16:5
   |
LL |     depr_safe_2015();
   |     ^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

warning: use of function `deprecated_safe::depr_safe_2018` without an unsafe function or block has been deprecated as it is now an unsafe function
  --> $DIR/deprecated-safe-unsafe-edition-call.rs:18:5
   |
LL |     depr_safe_2018();
   |     ^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: `#[warn(deprecated_safe)]` on by default
   = note: this function was previously not marked unsafe, but has been marked unsafe since 1.61.0
   = note: consult the function's documentation for information on how to avoid undefined behavior
   = note: reason

warning: unnecessary `unsafe` block
  --> $DIR/deprecated-safe-unsafe-edition-call.rs:24:5
   |
LL |     unsafe {
   |     ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/deprecated-safe-unsafe-edition-call.rs:5:9
   |
LL | #![warn(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0133`.
